# majordomo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: rust.yml
src/: error_page.html  main.rs  notfound.html  server.rs  site.html  suggestion-box.js  types.rs
